FIND_PACKAGE(PCL REQUIRED)
list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
FIND_PACKAGE(OpenCV REQUIRED)

ADD_DEFINITIONS(${PCL_DEFINITIONS})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_LIBRARIES(${PCL_LIBRARY_DRIS})

ADD_EXECUTABLE(generate_pointcloud generatePointCloud.cpp)

TARGET_LINK_LIBRARIES(generate_pointcloud ${OpenCV_LIBS} ${PCL_LIBRARIES})


