FIND_PACKAGE(PCL REQUIRED)
list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
FIND_PACKAGE(OpenCV 3 REQUIRED)

ADD_DEFINITIONS(${PCL_DEFINITIONS})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_LIBRARIES(${PCL_LIBRARY_DRIS})

ADD_EXECUTABLE(generate_pointcloud generatePointCloud.cpp)

TARGET_LINK_LIBRARIES(generate_pointcloud ${OpenCV_LIBS} ${PCL_LIBRARIES} slamBase)

ADD_LIBRARY(slamBase slamBase.cpp)
TARGET_LINK_LIBRARIES(slamBase ${OpenCV_LIBS} ${PCL_LIBRARIES})

ADD_EXECUTABLE(detectFeatures detectFeatures.cpp)
TARGET_LINK_LIBRARIES(detectFeatures ${OpenCV_LIBS} slamBase)